
2020-11-03  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, ppparse.y: actually %require bison 3.0 (see 2020-02-02)

2020-11-02  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l (ppcopy_find_file): extracted from (ppcopy)
	* pplex.l (ppcopy): reordered to remove need for goto
	* pplex.l (ppcopy): for COPY copybook-name IN library-name
	  try to resolve library-name via environment COB_COPY_LIB_library-name
	  before testing as-is and additional fallback to "ignore library-name"
	  for compatibility to earlier GnuCOBOL and MF versions
	* pplex.l: don't add extension if already part of the copybook-name,
	  for compatibility: can be disabled by defining COB_MULTI_EXTENSION
	* cobc. (process_env_copy_path): handle empty entry as "." (MF-compat)

2020-10-31  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_initialize_compound): resolve occurs_max only once
	* cobc.c, flag.def: added -fno-dump=<scope>
	* flag.def, cobc.c, cobc.h, help.c: added CB_FLAG_OP for flags
	  with optional parameter

2020-10-26  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c, config.c: defaults.h removed
	* cobc.c (cobc_getenv, cobc_getenv_path): return leading space
	  for later error reporting
	* cobc.c: allow omitting the definition for COB_EXPORT_DYN, COB_SHARED_OPT,
	  COB_PIC_FLAGS via config.h (mostly for MSVC)
	* cobc.c (cobc_print_info): extracted common code to cobc_var_and_envvar_print
	  and additionally check environment var for "empty"
	* Makefile.am: pass LOCALEDIR via define

2020-10-17  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_cobol_info): fixed C89 declaration
	* codegen.c: minor optimizations in generating pre-calculated offsets
	  and check for flag_filler instead of strcmp

2020-10-13  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_size): limit variable scope
	* codegen.c (output_initialize_uniform): limit variable scope and
	  calculation in chk_field_variable_size to be only done if used